# talktome

./: .gitignore  CHANGES.md  CLAUDE.md  CRUSH.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  PROMPT.md  README.md  REFACTOR.md  SDD.md  TODO.md  implementation_plan.md  package-lock.json  package.json  prompt.md  real_time_strategy.md  svelte.config.js  tailwind.config.js  test_vad.md
.github/: copilot-instructions.md
.github/workflows/: release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  debug_logger.rs  error.rs  hotkey_fsm.rs  lib.rs  main.rs  settings.rs  storage.rs  stt.rs  system_audio.rs  text_insertion.rs  translation.rs
src-tauri/tests/: common.rs  error_tests.rs
src/lib/stores/: persistence.ts  settingsStore.ts
src/routes/: +layout.js  +layout.svelte  +page.svelte  layout_backup.svelte
src/routes/(app)/: +layout.js  +layout.svelte  +page.svelte
src/routes/(app)/about/: +page.svelte
src/routes/(app)/api-settings/: +page.svelte
src/routes/(app)/audio-settings/: +page.svelte
src/routes/(app)/language-settings/: +page.svelte
src/routes/about/: +page.svelte
src/routes/api-settings/: +page.svelte
src/routes/audio-settings/: +page.svelte
src/routes/confirm-recording/: +layout@.svelte  +page.js  +page.svelte
src/routes/confirmation/: +page.svelte
src/routes/language-settings/: +page.svelte
src/routes/preferences/: +page.svelte
static/: countdown.html  instant-recording.html  recording-stopped.html
(+1 files in other folders)
