[package]
name = "talktome"
version = "0.4.3"
description = "Voice to Text with Translation"
authors = ["bgeneto"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-stronghold = "2.3"
tauri-plugin-notification = "2.3"
tauri-plugin-store = "2.4"
keyring = "1.2"
whoami = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
nnnoiseless = { version = "0.5", features = ["default"] }
arboard = "3.4"
enigo = "0.2"

